--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ img#logo{
 
 }
 .intro-content{
-    /* margin-top: 10%; */
+    
     text-align: center;
 }
 .About-us{
@@ -30,6 +30,12 @@ h1{
     font-size: xx-large;
 }
 #service{
-    text-align: center;
+   
     background-image: url(../images/assets/backgrounds/s_image.jpg);
+
+}
+#service-content{
+    text-align: center;
+    padding: 50px;
+    margin: 50px;
 }
