--- a/css/styles.css
+++ b/css/styles.css
@@ -42,4 +42,6 @@ h1{
 }
 .container-fluid{
     background-image: url(../images/assets/backgrounds/c_image.jpg);
+    background-repeat: no-repeat;
+    text-align: center;
 }
