--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
     background-size: cover;
     text-align: center;
     color: white;
+    background-position: center center;
+    padding-top: 0%;
     
 }
 img#logo{
@@ -19,20 +21,31 @@ img#logo{
     
     text-align: center;
 }
-.About-us{
+.about{
     text-align: center;
 }
 #mouse-click{
     margin-top: 13%;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    padding-top: 20px;
+   
+}
+#mouse-click{
+  animation: bounce 3s infinite;
 
 }
-/* #work1, #work2,#work3,#work4{
-    display: inline;
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-50px);
+    }
+    60% {
+        transform: translateY(-40px);
+    }
 }
-#work5, #work6,#work7,#work8{
-    display: inline;
-} */
+
 
 h1{
     font-size: xx-large;
@@ -55,12 +68,16 @@ h1{
     color: white;
 }
 .form{
-   padding-top: 20px;
-    padding-bottom: 80px;
+   padding-top: 10px;
+    padding-bottom: 20px;
     margin-top: 10px;
-    margin-bottom: 30px;
-    color: transparent;
+    margin-bottom: 10px;
+    color: white;
+    
 } 
+.form-group form-inline col-md-4{
+    display: flex;
+}
 .contact{
     padding-top: 30px;
     margin-top: 20px;
