--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,9 @@ img#logo{
 }
 .about{
     text-align: center;
+    padding: 20px;
+    margin: 15px;
+    border: 10px;
 }
 #mouse-click{
     margin-top: 13%;
@@ -57,8 +60,9 @@ h1{
 }
 #service-content{
     text-align: center;
-    padding: 50px;
-    margin: 50px;
+    padding: 100px;
+    margin: 70px;
+    border:40px;
     color: white;
 }
 .container-fluid{
