--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ h1{
     border:40px;
     color: white;
 }
-#design, #development, #product{
+#design, #development, #management{
     display: none;
 }
 .container-fluid{
