--- a/css/styles.css
+++ b/css/styles.css
@@ -115,3 +115,16 @@ h1{
     max-width: 100%;
     max-height: 100%;
 }
+#textHover1, #textHover2, #textHover3, #textHover4, #textHover5, #textHover6, #textHover7, #textHover8{
+    display: none;
+    padding-top: 50%;
+    text-align: center;
+    position: absolute;
+    background-color: white;
+    top: 25px;
+    left: 40px;
+    color: black;
+    width: 100%;
+    height: 100%;
+
+}
