--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,6 @@ h1{
 .container-fluid{
     background-image: url(../images/assets/backgrounds/c_image.jpg);
     background-repeat: no-repeat;
-    /* text-align: center; */
     color: white;
 }
 .contact-content{
@@ -123,16 +122,36 @@ h1{
     max-width: 100%;
     max-height: 100%;
 }
-#textHover1, #textHover2, #textHover3, #textHover4, #textHover5, #textHover6, #textHover7, #textHover8{
+/* #textHover1, #textHover2, #textHover3, #textHover4, #textHover5, #textHover6, #textHover7, #textHover8{
     display: none;
-    padding-top: 50%;
+    padding-top: 100%;
     text-align: center;
-    position: absolute;
-    background-color: white;
-    top: 25px;
-    left: 40px;
+    position: relative;
+    background-color:rgba(0, 0,0, 0.5);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
     color: black;
     width: 100%;
     height: 100%;
+    text-align: center;
 
+     */
+
+/* } */
+#work4{
+    position: relative;
+
+}
+#textHover1{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    transform: translate(-50%, -50%);
+    border: 2px solid white;
+    height: 90%;
+    width: 75%;
 }
