--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     color: white;
     background-position: center center;
     padding-top: 0%;
+    background-attachment: fixed;
     
 }
 img#logo{
